--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"seedrandom": "^3.0.5"
+		"seedrandom": "^3.0.5",
+		"peerjs": "1.5.4"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
